# vibe-app

./: package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/cus_tts/: example_onnx.rs  helper.rs  mod.rs
src-tauri/tts_models/supertonic/: .gitignore  README.md
src/app/: router.tsx
src/app/routes/: home.tsx  voice.tsx
