[package]
name = "vibe_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-shell = "^2.0.0"
tauri-plugin-process = "^2.3.1"
once_cell = "1.21.3"

# tts from: https://github.com/supertone-inc/supertonic/blob/main/rust/Cargo.toml
# ONNX Runtime
ort = { version = "2.0.0-rc.7", features = ["coreml"] }

# Array processing (like NumPy)
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio processing
hound = "3.5"
rustfft = "6.2"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# Regular expressions
regex = "1.10"

# System calls
libc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
